# paymcp

./: .coveragerc  .gitignore  .gitleaks.toml  CHANGELOG.md  LIST_CHANGE_TEST_COVERAGE.md  README.md  codecov.yml  compliance-scan-results.json  pyproject.toml  pytest.ini
.github/: codeql-config.yml  dependabot.yml
.github/codeql/: codeql-config.yml
.github/scripts/: compliance-scan.py  free-compliance-scan.py  generate_coverage_report.py
.github/workflows/: advanced-security.yml  ci.yml  codeql.yml  coverage-minimal.yml  coverage.yml  dependency-review.yml  quality-gate.yml  security.yml  test-coverage.yml
docs/: README.md  api.md  installation.md  payment-flows.md  providers.md  quickstart.md  testing.md
src/paymcp/: __init__.py  core.py  decorators.py
src/paymcp/payment/: payment_flow.py  webview.py
src/paymcp/providers/: __init__.py  adyen.py  base.py  coinbase.py  mock.py  paypal.py  square.py  stripe.py  walleot.py  x402.py
src/paymcp/session/: __init__.py  manager.py  memory.py  pending_tracker.py  pending_tracker_enhanced.py  types.py
src/paymcp/state/: __init__.py  base.py  in_memory.py  memory.py  redis.py
src/paymcp/subscriptions/: wrapper.py
src/paymcp/utils/: client_detection.py  context.py  jwt.py  (+8 more)
tests/: __init__.py  test_core.py  test_core_extended.py  test_decorators.py  test_edge_cases.py  test_init.py  test_integration.py  test_providers_init.py  test_session_persistence.py
tests/payment/: test_elicitation_flow.py  test_flow_auto.py  test_flows_init.py  test_list_change_flow.py  test_progress_flow.py  test_resubmit_flow.py  test_two_step_flow.py  test_webview.py  test_x402_flow.py
tests/providers/: test_adyen.py  test_base.py  test_coinbase.py  test_mock.py  test_paypal.py  test_square.py  test_stripe.py  test_walleot.py  test_x402_provider.py
tests/session/: test_manager.py  test_memory.py  test_memory_extended.py  test_types.py
tests/state/: __init__.py  test_in_memory.py  test_redis.py  test_state_init.py
tests/subscriptions/: test_wrapper.py
tests/utils/: test_elicitation_utils.py  test_messages.py  test_payment.py  test_session.py  test_session_extended.py
(+16 files in other folders)
