[project]
name = "paymcp"
version = "0.1.2"
description = "Provider-agnostic payment layer for MCP (Model Context Protocol) tools and agents."
authors = [
    {name = "Blust Inc", email = "info@blust.ai"},
]
dependencies = ["requests>=2.32.4", "pydantic>=2.11.7"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
webview = ["pywebview>=4.0"]        # pip/pdm install paymcp[webview]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "diff-cover>=8.0.0",
    "coverage-badge>=1.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "diff-cover>=8.0.0",
    "coverage-badge>=1.1.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.package-dir]
"" = "src"

[tool.pdm.scripts]
test = "pytest"
test-cov = "pytest --cov"
test-watch = "pytest --watch"
lint = "flake8 src tests"
format = "black src tests"
typecheck = "mypy src"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test since it's common in tests

[tool.bandit.assert_used]
exclude = ["*_test.py", "*test_*.py"]