[project]
name = "paymcp"
version = "0.4.2"
description = "Provider-agnostic payment layer for MCP (Model Context Protocol) tools and agents."
authors = [
    {name = "PayMCP Open Source Contributors", email = "dev@paymcp.info"},
]
dependencies = ["requests>=2.32.4", "pydantic>=2.11.7"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
webview = ["pywebview>=4.0"]        # pip/pdm install paymcp[webview]

[tool.pdm.dev-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.package-dir]  
"" = "src" 

